# rust-web-handson

./: .env_test  .gitignore  Cargo.toml  README.md  clippy-report-file  sonar.properties
http/: todo.http
integration-test/: Cargo.toml
integration-test/src/: main.rs
local-middleware/: docker-compose.yaml
local-middleware/wiremock/__files/: response_404.json
local-middleware/wiremock/mappings/: request_user1.json  request_user10.json
rust-web-handson-app/: Cargo.toml
rust-web-handson-app/src/: lib.rs  modules.rs
rust-web-handson-app/src/usecase/: mod.rs  todo.rs
rust-web-handson-domain/: Cargo.toml
rust-web-handson-domain/src/model/: todo.rs
rust-web-handson-domain/src/repository/: mod.rs  todo.rs
rust-web-handson-infra/: Cargo.toml
rust-web-handson-infra/src/: lib.rs  modules.rs
rust-web-handson-infra/src/client/: mysql.rs
rust-web-handson-infra/src/dao/: todo.rs
rust-web-handson-infra/src/repository/: mod.rs  todo.rs
rust-web-handson-presentation/: Cargo.toml
rust-web-handson-presentation/src/: lib.rs
rust-web-handson-presentation/src/bootstrap/: mod.rs
rust-web-handson-presentation/src/controller/: mod.rs  todo.rs
rust-web-handson-presentation/src/model/: mod.rs  todo.rs  todo_create_request.rs  todo_create_response.rs
