[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = {version = "1.18.2", features = ["full"]}
rust-web-handson-presentation = {path = "../rust-web-handson-presentation"}
anyhow = "1.0.57"
once_cell = "1.12.0"
