[package]
name = "rust-web-handson-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4.19"
derive-new = "0.5.9"
mockall = "0.11.1"
mockall_double = "0.3.0"
