[package]
edition = "2021"
name = "rust-web-handson-presentation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = {version = "0.5.5", features = ["multipart"]}
chrono = "0.4.19"
dotenv = "0.15.0"
rust-web-handson-app = {path = "../rust-web-handson-app"}
rust-web-handson-domain = {path = "../rust-web-handson-domain"}
rust-web-handson-infra = {path = "../rust-web-handson-infra"}
serde = {version = "1.0.137", features = ["derive"]}
thiserror = "1.0.31"
tokio = {version = "1.18.2", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
mockall = "0.11.1"
mockall_double = "0.3.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace"] }
http = "0.2"